tests/fixtures/invalid/str_floordiv_bool.py
# Cannot floor divide Str and Bool
x: str = "hello" // True
